--- a/6-objetos/reto4/retoCuatroProgramacionUno.html
+++ b/6-objetos/reto4/retoCuatroProgramacionUno.html
@@ -9,9 +9,9 @@
 
 <body>
     <h1></h1>
+    <button type="submit" id="enviar">Enviar formulario</button>
 
-
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoCuatroProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
