--- a/6-objetos/reto5/retoCincoProgramacionUno.html
+++ b/6-objetos/reto5/retoCincoProgramacionUno.html
@@ -9,8 +9,7 @@
 
 <body>
     <h1></h1>
-
-
+    <input type="text" name="text" class="texto">
     <script type="text/javascript" src="retoTresProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
