--- a/6-objetos/reto5/retoCincoProgramacionUno.html
+++ b/6-objetos/reto5/retoCincoProgramacionUno.html
@@ -8,8 +8,16 @@
 </head>
 
 <body>
-    <h1></h1>
-    <input type="text" name="text" class="texto">
+
+
+    <!-- <input type="text " id="text" required>
+    <button class="clicked">Send</button>-->
+    <!--Funciona tambn-->
+    <form action="">
+        <!--Funciona pero limpian la consola despues de enviar-->
+        <input type="text" id="input" required>
+        <input class="clicked" type="submit">
+    </form>
     <script type="text/javascript" src="retoTresProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
