--- a/7-arreglos_Bucles/reto6/retoSeisProgramacionDos.html
+++ b/7-arreglos_Bucles/reto6/retoSeisProgramacionDos.html
@@ -8,10 +8,20 @@
 </head>
 
 <body>
-    <h1></h1>
+    <p>Cuales son tus 2 peliculas favoritas?</p>
+    <input type="text" name="dato[]" class="datoInput">
+    <br>
+    <br>
+    <input type="text" name="dato[]" class="datoInput">
+    <br>
+    <br>
+    <button id="button">Ingresar peliculas</button>
+
+    <h1 id="message"></h1>
+    <h1 id="message2"></h1>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoSeisProgramacionDos.js">
         // adicionar archivo Js externo
     </script>
 </body>
