--- a/6-objetos/reto8/retoOchoProgramacionUno.html
+++ b/6-objetos/reto8/retoOchoProgramacionUno.html
@@ -4,16 +4,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>mi primer código JavaScript</title>
+    <title>Bonus</title>
+    <link rel="stylesheet" href="retoOchoProgramacionUno.css">
+    <link rel="stylesheet" href="bonus.css">
 </head>
 
-<body>
-    <h1></h1>
+<body id="body">
+    <h1 class="mensaje">
+        :)
+    </h1>
 
-
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
-        // adicionar archivo Js externo
-    </script>
+    <select class="select">
+            <option value="0">:)</option>
+            <option value="1">:(</option>
+    </select>
+    <button class="btn">Update</button>
+    <script src="retoOchoProgramacionUno.html"></script>
 </body>
 
 </html>
