--- a/7-arreglos_Bucles/reto8/retoOchoProgramacionDos.html
+++ b/7-arreglos_Bucles/reto8/retoOchoProgramacionDos.html
@@ -8,10 +8,21 @@
 </head>
 
 <body>
-    <h1></h1>
+
+    <h1>Lista de tareas</h1>
+
+    <div class="container">
+        <li>Recoger setas en el campo</li>
+        <br>
+        <li>Comprar pilas</li>
+        <br>
+        <li>Poner una lavadora de blancos</li> <br>
+        <li>Aprender cómo se realizan las peticiones al servidor en JavaScript</li>
+
+    </div>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoOchoProgramacionDos.js">
         // adicionar archivo Js externo
     </script>
 </body>
