--- a/7-arreglos_Bucles/reto9/retoNueveProgramacionDos.html
+++ b/7-arreglos_Bucles/reto9/retoNueveProgramacionDos.html
@@ -11,7 +11,7 @@
     <h1></h1>
 
 
-    <script type="text/javascript" src="retoTresProgramacionUno.js">
+    <script type="text/javascript" src="retoNueveProgramacionUno.js">
         // adicionar archivo Js externo
     </script>
 </body>
